fix(api): repair stuff
